rm async return on ss

--- a/secretsquirrel.htm
+++ b/secretsquirrel.htm
@@ -67,7 +67,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		</div>
 	</div>
 </div>
-<script src="secretsquirrel.js" async></script>
+<script src="secretsquirrel.js"></script>
 <script>var secretsquirrel = new Konami('https://chuckreynolds.us/?utm_source=secretsquirrel');</script>
 </body>
 </html>
